--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -2,19 +2,19 @@
 workgroup = WORKGROUP
 server string = file-server-01
 security = user
-create mask = 4777
-directory mask = 4777
-
-[important]
-path = /home/paul
-valid users = paul
-read only = yes
-writable = no
-public = no
+map to guest = bad user
 
 [public]
 path = /srv/public
 guest ok = yes
-read only = no
-writable = yes
+read only = yes
+writable = no
 public = yes
+
+[private]
+path = /srv/private
+guest ok = no
+read only = no
+writeable = yes
+public = no
+valid users = @secret
