secure smb.conf

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -1,5 +1,4 @@
 [global]
-guest account = root
 map to guest = bad user
 workgroup = WORKGROUP
 server string = file-server-01
@@ -7,16 +6,17 @@ security = user
 create mask = 4777
 directory mask = 4777
 
-[important]
-path = /home/paul
-valid users = paul
-read only = yes
-writable = no
-public = no
-
 [public]
 path = /srv/public
 guest ok = yes
 read only = yes
-writable = yes
+writable = no
 public = yes
+
+[private]
+path = /srv/private
+guest ok = no
+read only = no
+writeable = yes
+public = no
+valid users = @secret
